@@ -2,6 +2,6 @@
 
 SUBDIRS= libdb libregex libutil btreeop gctags global gtags htags machine doc
 
-EXTRA_DIST = VERSION FAQ LICENSE global.conf gtags.el nvi-1.79-gtags.diff w32
+EXTRA_DIST = VERSION FAQ LICENSE global.conf gtags.el nvi-1.79-gtags.diff w32 reconf.sh
 
 CLEANFILES = GTAGS GRTAGS GSYMS GPATH
